--- a/Resume/app/src/main/res/layout/activity_main.xml
+++ b/Resume/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/callButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -37,14 +37,14 @@
         app:layout_constraintTop_toBottomOf="@+id/workHistoryButton" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/emailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Email Jerry"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/callButton" />
 
     <ImageView
         android:id="@+id/imageView3"
