--- a/JojoCharacters/app/src/main/res/layout/activity_character_details.xml
+++ b/JojoCharacters/app/src/main/res/layout/activity_character_details.xml
@@ -12,26 +12,37 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="176dp"
         android:layout_marginStart="176dp"
+        android:layout_marginTop="112dp"
         android:text="TextView"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="383dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/standTextView"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
-        tools:layout_editor_absoluteX="177dp" />
+        app:layout_constraintStart_toStartOf="@+id/nameTextView"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
     <TextView
         android:id="@+id/duwangTextView"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="40dp"
         android:text="TextView"
-        app:layout_constraintTop_toBottomOf="@+id/standTextView"
-        tools:layout_editor_absoluteX="177dp" />
+        app:layout_constraintStart_toStartOf="@+id/standTextView"
+        app:layout_constraintTop_toBottomOf="@+id/standTextView" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="161dp"
+        android:layout_height="146dp"
+        android:layout_marginTop="164dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 </android.support.constraint.ConstraintLayout>
