--- a/NoteTaker/app/src/main/res/layout/activity_note.xml
+++ b/NoteTaker/app/src/main/res/layout/activity_note.xml
@@ -21,4 +21,22 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="124dp"
+        android:layout_marginStart="124dp"
+        android:text="Cancel"
+        app:layout_constraintStart_toEndOf="@+id/saveButton"
+        tools:layout_editor_absoluteY="593dp" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        tools:layout_editor_absoluteX="71dp"
+        tools:layout_editor_absoluteY="593dp" />
 </android.support.constraint.ConstraintLayout>
