--- a/NoteTaker/app/src/main/res/layout/activity_main.xml
+++ b/NoteTaker/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,19 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginStart="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="507dp"
         android:layout_weight="0"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:id="@+id/addEmotionButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="37dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
         android:text="Add New Emotion"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,14 +28,18 @@
         app:layout_constraintTop_toBottomOf="@+id/listView" />
 
     <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
+        android:id="@+id/emotionSummaryButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:text="Save"
-        app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="@+id/button3" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="36dp"
+        android:text="Your Emotion Summary "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/addEmotionButton"
+        app:layout_constraintTop_toTopOf="@+id/addEmotionButton" />
 
 </android.support.constraint.ConstraintLayout>
 
