--- a/NoteTaker/app/src/main/res/layout/activity_note.xml
+++ b/NoteTaker/app/src/main/res/layout/activity_note.xml
@@ -8,26 +8,25 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="wrap_content"
+        android:layout_width="264dp"
         android:layout_height="42dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="180dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="328dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:gravity="top"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/emotionSpinner"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/emotionSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="148dp"
+        android:onClick="getSelectedEmotion"
         android:text="Save Changes"
         app:layout_constraintStart_toStartOf="@+id/editText"
         app:layout_constraintTop_toBottomOf="@+id/editText" />
@@ -44,18 +43,31 @@
 
     <Spinner
         android:id="@+id/emotionSpinner"
-        android:layout_width="395dp"
+        android:layout_width="266dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="23dp"
-        android:layout_marginTop="36dp"
-        android:text="Select an Emotion"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_height="38dp"
+        android:layout_marginTop="16dp"
+        android:text="Emotion:"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/emotionSpinner"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        android:text="Comment:"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/emotionSpinner"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </android.support.constraint.ConstraintLayout>
